--- a/public/less/variables.less
+++ b/public/less/variables.less
@@ -17,6 +17,9 @@
 @my-navbar-height: 50px; 
 @my-navbar-margin-bottom: 10px;
 
+/* Footer */
+@my-footer-height: 20px;
+
 /* Sign in / Porgot password / change password */ 
 @my-form-max-width: 400px;
 
